template/sg-update.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description:
  AWS SecurityGroup Resource

Parameters:
  ProjectName:
    Description: ""
    Type: String
    Default: test

Outputs:
  ProjectName:
    Value: !Ref ProjectName
  PublicSecurityGroup:
    Value: !Ref PublicSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-PublicSecurityGroup"
  PrivateSecurityGroup:
    Value: !Ref PrivateSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-PrivateSecurityGroup"

Resources:
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "PublicSecurityGroup"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-VPC" }
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}.security-group.public"
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: NetworkSegment
          Value: public

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "PrivateSecurityGroup"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-VPC" }
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref PublicSecurityGroup
          IpProtocol: "-1"
          FromPort: "-1"
          ToPort: "-1"
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}.security-group.private"
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: NetworkSegment
          Value: private
